[package]
name = "git-flow-rs"
version = "0.3.0"
edition = "2021"
authors = ["niuiic <niuiicde@gmail.com>"]
keywords = ["git", "gitflow"]
homepage = "https://github.com/niuiic/git-flow.rs"
repository = "https://github.com/niuiic/git-flow.rs"
categories = ["command-line-utilities"]
license = "MIT"
build = "build.rs"
description = "Extensible git flow written in rust."

[[bin]]
name = "git-flow"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
regex = "1.10.2"
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }

[build-dependencies]
built = "0.7.1"
