[package]
name = "git-flow-rs"
version = "0.4.0"
edition = "2021"
authors = ["niuiic <niuiicde@gmail.com>"]
keywords = ["git", "gitflow"]
license = "MIT"
homepage = "https://github.com/niuiic/git-flow.rs"
repository = "https://github.com/niuiic/git-flow.rs"
categories = ["command-line-utilities"]
description = "Extensible git flow written in rust."

[[bin]]
name = "git-flow"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
tabled = "0.15.0"
